// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`existing skills render cleanly > renders shipped per-target metadata for the priming and review skills > github-issue-priming-claude-frontmatter 1`] = `
{
  "description": "Use when starting work on a GitHub issue — triggers on issue numbers, issue URLs, or phrases like "start issue", "work on issue", "prime issue". Also use when asked to investigate, scope, or begin planning around a GitHub issue.",
  "model": "claude-opus-4-7",
  "name": "github-issue-priming",
}
`;

exports[`existing skills render cleanly > renders shipped per-target metadata for the priming and review skills > github-issue-priming-codex-frontmatter 1`] = `
{
  "description": "Use when starting work on a GitHub issue — triggers on issue numbers, issue URLs, or phrases like "start issue", "work on issue", "prime issue". Also use when asked to investigate, scope, or begin planning around a GitHub issue.",
  "license": "MIT",
  "metadata": {
    "short-description": "Prime a GitHub issue into a research-backed implementation workflow",
  },
  "name": "github-issue-priming",
}
`;

exports[`existing skills render cleanly > renders shipped per-target metadata for the priming and review skills > github-issue-priming-sidecar 1`] = `
{
  "interface": {
    "brand_color": "#24292f",
    "display_name": "GitHub Issue Priming",
    "short_description": "Research and stage a GitHub issue for implementation",
  },
}
`;

exports[`existing skills render cleanly > renders shipped per-target metadata for the priming and review skills > linear-issue-priming-claude-frontmatter 1`] = `
{
  "description": "Use when starting work on a Linear issue — triggers on Linear identifiers (ENG-123), Linear URLs, or phrases like "start issue", "work on issue", "prime issue". Also use when asked to investigate, scope, or begin planning around a Linear issue.",
  "model": "claude-opus-4-7",
  "name": "linear-issue-priming",
}
`;

exports[`existing skills render cleanly > renders shipped per-target metadata for the priming and review skills > linear-issue-priming-codex-frontmatter 1`] = `
{
  "description": "Use when starting work on a Linear issue — triggers on Linear identifiers (ENG-123), Linear URLs, or phrases like "start issue", "work on issue", "prime issue". Also use when asked to investigate, scope, or begin planning around a Linear issue.",
  "license": "MIT",
  "metadata": {
    "short-description": "Prime a Linear issue into a research-backed implementation workflow",
  },
  "name": "linear-issue-priming",
}
`;

exports[`existing skills render cleanly > renders shipped per-target metadata for the priming and review skills > linear-issue-priming-sidecar 1`] = `
{
  "interface": {
    "brand_color": "#5e6ad2",
    "display_name": "Linear Issue Priming",
    "short_description": "Research and stage a Linear issue for implementation",
  },
}
`;

exports[`existing skills render cleanly > renders shipped per-target metadata for the priming and review skills > pr-review-sidecar 1`] = `
{
  "interface": {
    "brand_color": "#0969da",
    "display_name": "PR Review",
    "short_description": "Run a multi-agent review of a GitHub pull request",
  },
}
`;
